# captain-food

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  render-deploy.json  render.yaml  rust-toolchain.toml
.claude/agents/: generator.md
.claude/hooks/: validate-generated.sh
.github/workflows/: build-image.yml  ci.yml  codegen-consistency.yml  db-migrate.yml  prod-smoke.yml  sirene-sync.yml  stale-claim-reaper.yml
crates/adapters/avelo37/: Cargo.toml
crates/adapters/avelo37/src/: acl.rs  http.rs  lib.rs  main.rs  outbound.rs  raw.rs
crates/adapters/stripe/: Cargo.toml
crates/adapters/stripe/src/: acl.rs  http.rs  lib.rs  main.rs  outbound.rs
crates/adapters/uber_direct/: Cargo.toml
crates/adapters/uber_direct/src/: acl.rs  config.rs  http.rs  lib.rs  main.rs  outbound.rs  raw.rs
crates/application/: Cargo.toml
crates/application/src/: auth_sessions.rs  behaviour_support.rs  commands.rs  deliveries.rs  dispatch.rs  dispatch_strategy.rs  journal.rs  lib.rs  payments.rs  pm_state.rs  ports.rs  pricing.rs  projections.rs  queries.rs  repository.rs
crates/application/src/process_managers/: cart_binding.rs  delivery_dispatch.rs  mod.rs  place_order.rs  refund.rs
crates/application/src/process_managers/delivery_dispatch/: tests.rs
crates/application/src/projectors/: cart.rs  catalog.rs  mod.rs  order_tracking.rs  prospection_pipeline.rs  restaurant.rs
crates/application/tests/: cart_behaviour.rs  catalog_behaviour.rs  customer_behaviour.rs  delivery_job_behaviour.rs  order_behaviour.rs  place_order_behaviour.rs  pm_state_mem.rs  prospect_behaviour.rs  restaurant_account_behaviour.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/desktop/: Cargo.toml
crates/domain/: Cargo.toml
crates/domain/src/: aggregate.rs  cart.rs  catalog.rs  customer.rs  delivery_job.rs  delivery_partner_registration.rs  lib.rs  order.rs  payment.rs  prospect.rs  restaurant.rs  restaurant_account.rs  rider.rs  shared.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/integrations/: delivery_gateway.rs  delivery_offer_timeout_worker.rs  hubrise.rs  inbound_drain_worker.rs  mod.rs  payments.rs  retention_sweep_worker.rs  sirene.rs  stripe.rs  supabase_auth.rs  sync_sirene_worker.rs
crates/infrastructure/src/persistence/: auth_sessions.rs  cart.rs  cart_store.rs  catalog.rs  catalog_store.rs  command_journal.rs  delivery_partner_availability.rs  delivery_satisfaction.rs  enum_sql.rs  inbound_events.rs  mod.rs  order.rs  order_tracking_store.rs  pm_state.rs  referential.rs  refund_queue.rs  restaurant.rs  status_bus.rs
crates/infrastructure/src/process_manager/: mod.rs  runner.rs
crates/infrastructure/src/projection/: mod.rs  worker.rs
crates/infrastructure/tests/: cart_projection.rs  catalog_projection.rs  customer_projection.rs  order_projection.rs  pending_refund_read_model.rs  restaurant_projection.rs  retention_sweep.rs  sync_sirene_worker.rs
crates/server/: Cargo.toml
crates/server/src/: auth.rs  auth_routes.rs  hosts.rs  lib.rs  main.rs  web_ssr.rs
crates/server/src/graphql/: acl.rs  mod.rs  routes.rs  schema.rs
crates/server/tests/: graphql_acl.rs  graphql_payment_status.rs  graphql_subscriptions.rs  graphql_write_path.rs
crates/shared_types/: Cargo.toml
crates/shared_types/src/: lib.rs
crates/web/: Cargo.toml
crates/web/assets/: app.css  tokens.generated.css
crates/web/src/: actions.rs  auth.rs  checkout.rs  executor.rs  graphql.rs  i18n.rs  interact.rs  lib.rs  pending.rs  renderer.rs  router.rs  subscriptions.rs
docs/: BACKLOG.md  PLAYBOOK.md  STATUS.md  codegen-roadmap.md  process-manager-rearchitecture.md  sagas.md  status.html  status.md
docs/adr/: 0004-commands-derived-from-use-cases.md  0028-pricing-3way-split-model.md  0033-spec-driven-sdui-customer-screens.md  0034-full-stack-rust.md  0035-project-structure-clean-architecture.md  0037-spec-organization-schema-driven-codegen.md  0039-projection-views-generated-from-lineage.md  0040-materialized-read-model-tables-projectors.md  0041-acting-user-is-envelope-not-payload.md  0042-hosting-render-supabase-frankfurt.md  0043-db-migration-release-strategy.md  0044-coopyleft-license.md  0047-api-auth-supabase-jwt-jwks.md  20260718-145856-inbound-webhook-integration-acl.md  20260718-213352-partner-adapter-crates-and-external-m2m.md  20260719-014434-checkout-snapshot-on-paymentintentcreated.md  20260719-031136-write-side-repository-event-sourced-actor.md  20260719-172821-typed-step-process-manager-dsl.md  20260719-214500-service-catalog-configurable-binding.md  20260720-002217-server-side-pricing.md  20260720-003142-refund-opened-event.md  20260720-004556-partner-reoffer-policy.md  (+33 more)
incoming_news_from_perplexity/: 20260701-09h57-It’s to create a restaurant list to help restauran.md  20260701-21h01-Add these people referenced as intellectual framew.md  20260702-16h23-SDUI_ARCHITECTURE.md  20260703-09h25-RUST_ARCHITECTURE_DECISION.md  20260703-10h37-PROJECT_STRUCTURE.md
migrations/: 0001_baseline.sql  20260718100000_external_sirene_restaurants.sql  20260720002210_pending_refunds_view.sql  20260720004556_partner_reoffer_policy.sql  20260720011500_cart_session_id.sql  20260720020500_ordertracking_payment_intent_id.sql  20260720030000_command_inbound_journals.sql  20260721025159_retention_sweep_function.sql  20260721120000_hubrise_connections.sql  20260721130000_external_avelo37_events.sql  20260721140000_delivery_dispatch_strategy.sql  20260721150000_external_uber_direct_events.sql  20260721160000_delivery_partner_availability_view.sql  20260722000000_delivery_delay_satisfaction.sql  20260724150500_auth_sessions.sql
specs/: PRODUCT_SPEC_WEB_CLIENT.md  actors.yaml  api.yaml  commands.yaml  customer_screens.yaml  database.md  entities.yaml  errors.yaml  events.yaml  observability.yaml  processmanager.yaml  rules.yaml  scalars.yaml  services.yaml  stories.yaml  tests.yaml  translations.yaml  views.yaml
tools/codegen-rs/: Cargo.toml  rust-toolchain.toml
tools/codegen-rs/src/: main.rs
(+66 files in other folders)
