# Captain.Food — Cargo workspace root (ADR-0035, Clean Architecture crate layout).
#
# Virtual manifest (no [package] here): each layer is a member crate. The dependency DIRECTION is
# enforced structurally by which crates each member lists — outer depends on inner, never the reverse;
# `domain` lists no workspace crate at all. A forbidden edge (e.g. domain → application) would create a
# cycle and fail to compile. See docs/adr/0035-project-structure-clean-architecture.md.
[workspace]
resolver = "2"
members = [
    "tools/codegen-rs",        # spec validator + generator (ADR-0034) — tooling, not part of the app graph
    "crates/domain",           # ★ pure DDD — depends on nothing else
    "crates/application",      # use cases + ports (traits) — depends on domain
    "crates/sirene_ingest",    # SIRENE raw-ingestion client + CI bin (ADR-0045) — NO domain crates (thin CI build)
    "crates/infrastructure",   # adapters implementing ports — depends on application, domain, sirene_ingest (wire types)
    "crates/adapters/stripe",  # Stripe partner adapter (ADR-20260718-213352) — ACL + webhook shell + standalone bin
    "crates/adapters/hubrise", # HubRise partner adapter (ADR-20260718-213352) — ACL + webhook shell + standalone bin
    "crates/adapters/avelo37",  # Avelo37 delivery-partner adapter (ADR-20260718-213352, issue #28) — ACL + webhook shell + outbound + standalone bin
    "crates/shared_types",     # serde DTOs (+ UniFFI later)
    "crates/core",             # Crux core over domain — depends on domain, shared_types
    "crates/server",           # Axum BFF — depends on application, infrastructure, shared_types
    "crates/web",              # Leptos/WASM — depends on shared_types, core
    "crates/desktop",          # Tauri shell — depends on server, web
]

[workspace.package]
edition = "2021"
license-file = "LICENSE.md"

# Optimized release profile for the deployed `server` binary. This tunes the RUNTIME performance of the
# generated code and is independent of the build method (Docker vs native cargo) — the binary runs the same
# either way; these flags are what actually make it faster. `panic = "abort"` is deliberately NOT set: the
# server relies on per-request panic isolation (a panicking handler must not take down the whole process),
# which needs unwinding. `target-cpu` is left generic — Render's build and run hosts are not guaranteed to
# share a CPU, so a `native`-tuned binary could target the wrong chip. The extra compile cost of `lto` +
# `codegen-units = 1` is absorbed by the cargo-chef dependency-layer cache (ADR-0042).
[profile.release]
lto = "thin"          # cross-crate inlining — the main throughput/latency win
codegen-units = 1     # maximize optimization within each crate (slower build, faster binary)
strip = true          # drop symbols — smaller binary, faster load, no runtime-speed change

# Centralized versions for the light, host-buildable deps used by the skeleton. Heavier framework deps
# (axum/tokio/async-graphql, sqlx, leptos, tauri, crux, uniffi, reqwest) are added per crate when that
# layer's real code lands — kept out of the scaffold so `cargo build` stays fast and green everywhere.
[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
async-trait = "0.1"

# HTTP/DB runtime — landed with the `server` crate's real surface (ADR-0035). native-tls is used for
# sqlx TLS deliberately: it maps to SChannel on Windows dev boxes (no C compiler needed) and OpenSSL on
# Render's Linux build image, whereas rustls would require building `ring` (needs a C toolchain).
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
# Migrations are applied by sqlx-cli in CI (ADR-0043), not embedded in the app — so no `migrate`/`macros`.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-native-tls", "postgres"] }
# GraphQL BFF (ADR-0006 role-as-path). async-graphql 7.x targets axum 0.8. The `chrono` feature backs
# the `DateTime` scalar in the generated type layer.
async-graphql = { version = "7", features = ["chrono"] }
async-graphql-axum = "7"
