[package]
name = "application"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food application layer: use cases — ports (traits infrastructure must implement), CQRS command/query handlers, and process managers (sagas). Depends on `domain` ONLY (ADR-0035); must never depend on infrastructure/server/web."

[dependencies]
domain = { path = "../domain" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
