[package]
name = "app-core"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Crux core (app-shell over the domain): typed app state, UI events, and declared capabilities — pure, no side effects. Depends on `domain` + `shared_types` (ADR-0035). Named `app-core` (crate `app_core`) to avoid shadowing the std `core` crate."

# `crux_core` is added when the Crux app model lands; skeleton stays framework-free.
[dependencies]
domain = { path = "../domain" }
shared_types = { path = "../shared_types" }
serde = { workspace = true }
