[package]
name = "desktop"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Tauri 2.0 desktop shell (restaurant manager): embeds the `server` and `web` crates in-process. Depends on `server` + `web` (ADR-0035)."

# tauri is added when the shell lands; the skeleton is a plain bin that wires server + web.
[dependencies]
server = { path = "../server" }
web = { path = "../web" }
