[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food infrastructure: adapters implementing the application ports — the event store (append to domain_events), read-model repos over the View_* SQL views, and the integrations ACL (HubRise/Stripe/delivery). Depends on `application` + `domain` (ADR-0035)."

# sqlx / reqwest are added when the real adapters land (sqlx needs DATABASE_URL for its compile-time
# checks); kept out of the skeleton so the workspace builds offline.
[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
async-trait = { workspace = true }
