[package]
name = "infrastructure"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food infrastructure: adapters implementing the application ports — the event store (append to domain_events), read-model repos over the materialized projection tables, the app-layer projection worker (ADR-0040), the SIRENE staging-table sync worker (ADR-0045), and the integrations ACL (HubRise/Stripe/delivery). Depends on `application` + `domain` + `sirene_ingest` (ADR-0035/0045)."

[dependencies]
domain = { path = "../domain" }
application = { path = "../application" }
# SIRENE HTTP client + wire DTOs (ADR-0045): shared with the thin CI ingestion binary; the ACL here
# maps those wire types onto domain commands, and the sync worker drains the staging table they fill.
sirene_ingest = { path = "../sirene_ingest" }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
# `v5` on top of the workspace features: the SIRENE ACL derives DETERMINISTIC restaurant ids
# (UUIDv5 of the SIRET) so re-running the sync is idempotent across runs (integrations/sirene).
uuid = { workspace = true, features = ["v5"] }
# `chrono`/`uuid`/`json` bind the RestaurantRow column types (TIMESTAMPTZ/UUID/JSONB) on top of the
# workspace-pinned runtime/tls/postgres features (queries run over the session pooler, so plain
# prepared statements are fine).
sqlx = { workspace = true, features = ["chrono", "uuid", "json"] }
# The timer backs the projection/sirene workers' polling loops; `sync` adds the broadcast channel
# behind the in-process EventBus (appended-event fan-out for GraphQL subscriptions); the workspace
# feature set also carries rt/macros used by the integration test.
tokio = { workspace = true, features = ["sync"] }
# The generated /services/* HTTP clients (issue #26, ADR-20260719-214500) — constructed only for
# services whose spec binding is `http`, compiled for all so the wire path stays covered.
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
# Stripe webhook signature verification (integrations/stripe): HMAC-SHA256 over the RAW body with a
# constant-time comparison (`Mac::verify_slice`). All three are already in-tree transitively (sqlx's
# SCRAM auth pulls hmac/sha2/hex), so this adds no new build weight.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
