[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Axum BFF: the composition root that injects infrastructure adapters into the application, exposes GraphQL (role-as-path) + the SDUI hydration endpoint, and hosts tenant/auth/tracing middleware. Depends on `application` + `infrastructure` + `shared_types` (ADR-0035). Exposes a lib (wiring) so `desktop` can embed it."

[dependencies]
application = { path = "../application" }
# The generated GraphQL layer wraps the domain scalars/enums (orphan rule: the async-graphql wrapper
# newtypes + From conversions live here, `domain` stays GraphQL-free — ADR-0035).
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared_types = { path = "../shared_types" }

# Generated GraphQL type layer: wrapper scalar inners (uuid/chrono) + serde derives.
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP surface + DB health probe (ADR-0042) + GraphQL BFF (ADR-0006 role-as-path). The tenant/auth
# middleware and the runtime ACL guard land later; today the server binds $PORT, serves /health, and
# exposes the GraphQL schema per role path.
axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
