[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Axum BFF: the composition root that injects infrastructure adapters into the application, exposes GraphQL (role-as-path) + the SDUI hydration endpoint, and hosts tenant/auth/tracing middleware. Depends on `application` + `infrastructure` + `shared_types` (ADR-0035). Exposes a lib (wiring) so `desktop` can embed it."

[dependencies]
application = { path = "../application" }
# The generated GraphQL layer wraps the domain scalars/enums (orphan rule: the async-graphql wrapper
# newtypes + From conversions live here, `domain` stays GraphQL-free — ADR-0035).
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared_types = { path = "../shared_types" }

# Generated GraphQL type layer: wrapper scalar inners (uuid/chrono) + serde derives.
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP surface + DB health probe (ADR-0042) + GraphQL BFF (ADR-0006 role-as-path, with the generated
# per-role guard/visible ACL enforced at runtime). The tenant/auth (identity) middleware lands later;
# today the server binds $PORT, serves /health, and exposes the role-filtered GraphQL schema per path.
axum = { workspace = true }
# `sync` (RwLock) added for the JWKS cache in the ADR-0047 auth verifier, on top of the workspace features.
tokio = { workspace = true, features = ["sync"] }
sqlx = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
# API auth (ADR-0047): verify Supabase-issued JWTs against the project's PUBLIC keys (JWKS) — the signing
# secret never touches this server. `jsonwebtoken` does the signature/claims verification; `reqwest` fetches
# the JWKS (default-features off + native-tls, matching the workspace sqlx/infra TLS choice).
jsonwebtoken = "9"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
