[package]
name = "server"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Axum BFF: the composition root that injects infrastructure adapters into the application, exposes GraphQL (role-as-path) + the SDUI hydration endpoint, and hosts tenant/auth/tracing middleware. Depends on `application` + `infrastructure` + `shared_types` (ADR-0035). Exposes a lib (wiring) so `desktop` can embed it."

[dependencies]
application = { path = "../application" }
# The generated GraphQL layer wraps the domain scalars/enums (orphan rule: the async-graphql wrapper
# newtypes + From conversions live here, `domain` stays GraphQL-free — ADR-0035).
domain = { path = "../domain" }
infrastructure = { path = "../infrastructure" }
shared_types = { path = "../shared_types" }
# Partner webhook adapters (ADR-20260718-213352) — self-contained crates the monolith mounts via
# `<crate>::routes(...)`; each also ships a standalone binary for independent deployment.
stripe-adapter = { path = "../adapters/stripe" }
avelo37-adapter = { path = "../adapters/avelo37" }
coopcycle-adapter = { path = "../adapters/coopcycle" }
uber-direct-adapter = { path = "../adapters/uber_direct" }
hubrise-adapter = { path = "../adapters/hubrise" }

# Generated GraphQL type layer: wrapper scalar inners (uuid/chrono) + serde derives.
serde = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

# HTTP surface + DB health probe (ADR-0042) + GraphQL BFF (ADR-0006 role-as-path, with the generated
# per-role guard/visible ACL enforced at runtime). The tenant/auth (identity) middleware lands later;
# today the server binds $PORT, serves /health, and exposes the role-filtered GraphQL schema per path.
# `ws` on top of the workspace features: the GraphQL-over-WebSocket upgrade on `/{role}/graphql`
# (subscriptions — async-graphql-axum's GraphQLWebSocket runs over axum's WebSocket).
axum = { workspace = true, features = ["ws"] }
# `sync` (RwLock) added for the JWKS cache in the ADR-0047 auth verifier, on top of the workspace features.
tokio = { workspace = true, features = ["sync"] }
sqlx = { workspace = true }
serde_json = { workspace = true }
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
# The generated SubscriptionRoot resolvers are hand-shaped `stream! { ... }` state machines over the
# in-process EventBus (subscribe → filter by correlation → re-resolve the read model) — `async-stream`
# keeps that generated code readable instead of hand-rolled `unfold` plumbing.
async-stream = "0.3"
# API auth (ADR-0047): verify Supabase-issued JWTs against the project's PUBLIC keys (JWKS) — the signing
# secret never touches this server. `jsonwebtoken` does the signature/claims verification; `reqwest` fetches
# the JWKS (default-features off + native-tls, matching the workspace sqlx/infra TLS choice).
# `rust_crypto` selects the RustCrypto signature backend explicitly: with no backend feature the crate
# compiles but PANICS at runtime on the first verification ("Could not automatically determine the
# process-level CryptoProvider"), turning every authenticated request into a 502.
jsonwebtoken = { version = "10", features = ["rust_crypto"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

[dev-dependencies]
# In-memory read-repository stand-ins for the subscription tests (no DB needed).
async-trait = { workspace = true }
