[package]
name = "shared_types"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food shared types: serde request/response DTOs and the generated SDUI node/action types, shared across crates and (later) exported to iOS/Android via UniFFI. serde-only for now."

[dependencies]
serde = { workspace = true }
