[package]
name = "web"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Captain.Food Leptos frontend (compiles to WASM): the SDUI renderer + GENERATED component registry, action dispatcher, and non-SDUI screens (checkout, order tracking). Depends on `shared_types` + `app-core` (ADR-0035)."

# The SDUI renderer: the GENERATED component registry + Leptos views driven by it. Compiles two ways —
# `ssr` (default; server-render to HTML, what CI's `cargo build --workspace` builds) and `hydrate`
# (wasm32 client, built by trunk in a later CI step). leptos_router/leptos_i18n land in later splits.
[dependencies]
shared_types = { path = "../shared_types" }
app-core = { path = "../core" }
serde = { workspace = true }        # the generated registry derives Serialize/Deserialize on its enums
serde_json = { workspace = true }   # the data layer speaks raw GraphQL JSON until typed DTOs are generated
thiserror = { workspace = true }    # typed data-layer errors (gap refusals, transport, poll exhaustion)
async-trait = { workspace = true }  # the object-safe `Transport` seam (fake-injectable in tests)
uuid = { workspace = true, features = ["v7"] }  # v7: client-minted messageId/sessionId (time-ordered, ADR-20260720-015500)
leptos = { version = "0.8", default-features = false }
# hydrate-only: the wasm entry point. Pinned EXACTLY (=) because the Docker/CI bundle step installs
# wasm-bindgen-cli at the SAME version — the CLI refuses a version mismatch with the compiled crate,
# so the pin is what keeps the image build deterministic (bump both together).
wasm-bindgen = { version = "=0.2.126", optional = true }

# The wasm cdylib wasm-bindgen-cli processes into /assets/web.js + web_bg.wasm (rlib kept for the
# native ssr consumers: server + tests).
[lib]
crate-type = ["cdylib", "rlib"]

# Native (ssr) side of the data layer: reqwest is the house HTTP client (same pin + feature set as the
# adapters/server — native-tls maps to SChannel on Windows dev boxes, OpenSSL on the Linux build image).
# tokio only backs the poll-interval sleep; it is already in the native tree via leptos/ssr + server.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { workspace = true }

# uuid comes in transitively (via `domain`); on wasm32 its RNG + now_v7 timestamps need the `js`
# backend to compile, so the `hydrate` (wasm) build enables it. Native `ssr` builds are unaffected.
# reqwest on wasm32 is the browser-fetch backend (no TLS feature — the browser owns the socket);
# gloo-timers backs the poll-interval sleep; web-sys Window+Storage back the localStorage session.
[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1", features = ["js"] }
reqwest = { version = "0.12", default-features = false, features = ["json"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"    # spawn_local: the WS reconnect loop + Stripe promise adapters
js-sys = "0.3"                  # Object/Reflect/Promise: the Stripe.js interop surface (stripe.rs)
# WebSocket + events: the graphql-transport-ws browser driver (subscriptions.rs, split 3).
web-sys = { version = "0.3", features = ["Window", "Storage", "Location", "WebSocket", "MessageEvent", "CloseEvent"] }

[features]
default = ["ssr"]
# Server-side render path (native): produce initial HTML from the same view tree.
ssr = ["leptos/ssr"]
# Client hydration path (wasm32): attach to the server-rendered DOM. Built by trunk, not by CI's
# native workspace build.
hydrate = ["leptos/hydrate", "dep:wasm-bindgen"]
