[package]
name = "captain-food-codegen"
version = "0.1.0"
edition = "2021"
description = "Captain.Food spec validator + artifact generator (Rust port of tools/codegen — ADR-0034). Stage 1: spec loading + referential-integrity validation. The TypeScript codegen remains the gate until this reaches parity."

# The decision doc calls the entry `scripts/generate.rs`; here it is a proper Cargo binary named `generate`.
[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
