[package]
name = "captain-food-codegen"
version = "0.1.0"
edition = "2021"
description = "Captain.Food spec validator + artifact generator (Rust port of tools/codegen — ADR-0034). Full validator (validate.ts §1–§11) + all emitters, byte-identical to the TypeScript codegen. The TypeScript codegen remains the blocking gate until it is retired."

# The decision doc calls the entry `scripts/generate.rs`; here it is a proper Cargo binary named `generate`.
[[bin]]
name = "generate"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
# preserve_order: JSON.stringify keeps object insertion order; match it (map/desc payloads in the HTML doc).
serde_json = { version = "1", features = ["preserve_order"] }
