[package]
name = "uber-direct-adapter"
version = "0.1.0"
edition.workspace = true
license-file.workspace = true
publish = false
description = "Uber Direct delivery-partner adapter (issue #57, ADR-20260721-172500): a DeliveryProvider=PARTNER vertical slice via the Uber DIRECT delivery API (not the Uber Eats marketplace), mirroring avelo37-adapter/coopcycle-adapter. Single central API gated by UBER_DIRECT_* env: OAuth2 client-credentials token manager + Create Delivery outbound (offer_job carrying our deliveryJobId as external_id), plus the inbound ACL (X-Uber-Signature raw-body HMAC verification + Uber delivery-status mapping + the idempotent two-layer-inbox ingestor) and its HTTP shell (POST /adapters/uber-direct/webhooks). Exposes routes() for the monolith to mount, and a standalone uber-direct-webhook binary."

[[bin]]
name = "uber-direct-webhook"
path = "src/main.rs"

[dependencies]
# Inner layers only (dependency rule): the ACL maps Uber Direct shapes onto domain events via the
# application inbox port — it does NOT depend on `infrastructure` for its logic.
application = { path = "../../application" }
domain = { path = "../../domain" }
# The standalone binary (main.rs) constructs concrete Postgres adapters.
infrastructure = { path = "../../infrastructure" }

axum = { workspace = true }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v5", "v7"] }
chrono = { workspace = true }
# Signature verification (same versions as the workspace's other HMAC users — Stripe/Avelo37/CoopCycle).
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
# The outbound DeliveryService impl is an async trait; same crate the application port uses.
async-trait = { workspace = true }
# Outbound Uber Direct API client (Create Delivery + OAuth2 client-credentials token). Same crate +
# features as the Stripe/HubRise/Avelo37/CoopCycle outbound clients.
reqwest = { version = "0.12", default-features = false, features = ["native-tls", "json"] }
